--- a/Fortuna/Fortuna.csproj
+++ b/Fortuna/Fortuna.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BlazorDownloadFile" Version="2.1.6"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.9" PrivateAssets="all"/>
         <PackageReference Include="Radzen.Blazor" Version="3.11.8"/>
