--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,13 @@ jobs:
     - name: Publish
       run: dotnet publish Fortuna/Fortuna.csproj -c Release -o release --nologo
       
-    - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
-      run: sed -i 's/<base href="\/" \/>/<base href="\/fortuna-site\/" \/>/g' release/wwwroot/index.html
+    - name: Update base tag
+      run: sed -i 's/<base href="\/"\/>/<base href="\/fortuna-site\/"\/>/g' release/wwwroot/index.html
       
     - name: Add .nojekyll file
       run: touch release/wwwroot/.nojekyll
       
-    - name: copy index.html to 404.html
+    - name: Copy index.html to 404.html
       run: cp release/wwwroot/index.html release/wwwroot/404.html
       
     - name: Commit wwwroot to GitHub Pages
