--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,10 +14,10 @@ name: "CodeQL"
 on:
   workflow_dispatch:
   push:
-    branches: [ master, codeQL ]
+    branches: [ master ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ master, codeQL ]
+    branches: [ master ]
   schedule:
     - cron: '0 0 * * 0'
 
